# ballin-dangerzone

./: CMakeLists.txt  README.md  boundary.trace  dirty.trace  eviction.trace  fullline.trace  hit.trace  invalidate.trace  reset.trace  sample.trace  set.trace  tag.trace
project documentation/: 485 Final Project.docx  485 Final Project.odt  Final Project Report ECE485.odt  Final Project Report.odt  Final Report Format.docx  Final Report Format.odt  program execution.txt
src/: cache.c  cache.h  cache_stub.c  cache_stub.h  l1cache.c  l2cache.c  main.c  sample.trace
