cmake_minimum_required (VERSION 0.1)
project (cachesim)
add_executable (cachesim src/cache.c src/main.c)
find_library(M_LIB m)
target_link_libraries(cachesim ${M_LIB})
#install (TARGETS battery-info DESTINATION ~/bin)
#set (CMAKE_BUILD_TYPE Debug)
if (CMAKE_COMPILER_IS_GNUCXX)
	set (CMAKE_C_FLAGS "-std=c99 -Wall -g")
endif ()
